[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumvault-cryptography"
version = "1.0.0"
description = "Drop-in quantum-safe upgrade for Python cryptography - zero code changes required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "AllSecureX", email = "support@allsecurex.com"}
]
maintainers = [
    {name = "AllSecureX", email = "support@allsecurex.com"}
]
keywords = [
    "quantum",
    "cryptography",
    "post-quantum",
    "pqc",
    "security",
    "ml-kem",
    "ml-dsa",
    "kyber",
    "dilithium",
    "fips-203",
    "fips-204",
    "cnsa",
    "quantum-safe"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AllSecureX-Quantum/quantumvault-python"
Documentation = "https://docs.quantumvault.io"
Repository = "https://github.com/AllSecureX-Quantum/quantumvault-python"
Issues = "https://github.com/AllSecureX-Quantum/quantumvault-python/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
